<resources>
    <string name="app_name">Ma Réu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="icon">icon</string>
    <string name="delete">delete</string>
    <string name="add_meeting">add</string>
    <string name="Filter">Filter</string>
    <string name="fab">fab</string>
    <string name="floating">fab</string>
    <string name="location_filter">Location Filter</string>
    <string name="date_filter">Date Filter</string>
    <string name="name">name</string>
    <string name="topic">Topic</string>
    <string name="date">date</string>
    <string name="Date">date</string>
    <string name="start_meeting_hour">start_meeting_hour</string>
    <string name="end_meeting_hour">end_meeting_hour</string>
    <string name="meeting_room">meeting_room</string>
    <string name="mailaddress">mailAddress</string>
    <string name="mail_address">mail_address</string>
    <string name="logo">Logo</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eight">eight</string>
    <string name="nine">nine</string>
    <string name="ten">ten</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="end_meeting">End Meeting</string>
    <string name="add_a_new_meeting">ADD A NEW MEETING</string>
    <string name="room_choice">Room Choice</string>
    <string name="meeting_room_choice">Meeting room</string>
    <string name="meeting_room_selection">Meeting Room</string>
    <string name="save">Save</string>
    <string name="participants_e_mail">Participants\' e-mail</string>
    <string name="participants_e_mail2">Participants e-mail</string>
    <string name="reason_for_the_meeting">Reason for the meeting</string>
    <string name="hour_of_meeting">Hour of meeting</string>
    <string name="appointement_date">Appointement date</string>
    <string name="_8_00">8:00</string>
    <string name="no_filter">nofilter</string>
    <string name="room_one">Room One</string>
    <string name="start_hour">Start hour</string>
    <string name="nouvelle_reunion">NOUVELLE REUNION</string>
    <string name="objet_de_la_r_union">Objet de la réunion</string>
    <string name="date_de_la_r_union">Date de la réunion</string>
    <string name="heure_de_la_r_union">Heure de la réunion</string>
    <string name="num_ro_de_salle_de_r_union">Numéro de salle de réunion</string>
    <string name="e_mails_des_participants">E-mails des participants</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="scroll_view">scroll_view</string>
    <string name="ok">OK</string>
    <string name="valid_email">Valid email</string>
    <string name="heure_de_d_but_de_r_union">Heure de début de réunion</string>
    <string name="ajouter_un_mail">Ajouter un mail</string>
    <string name="erreur_objet_reunion">Merci de remplir le champs -Objet de la réunion-</string>
    <string name="erreur_heure_reunion">Merci de remplir le champs -Heure de la réunion-</string>
    <string name="erreur_mail">Veuillez entrer une adresse mail valide</string>
    <string name="erreur_minimum_mails">Veuillez entrer au moins 2 adresses mail</string>
    <string name="choose_your_room">Choose your room</string>
    <string name="room_one_spinner">Room One</string>
    <string name="ok_spinner">Ok</string>
    <string name="menu_choix_salle">Menu choix salle</string>
    <string name="number_of_room">10</string>
    Merci de remplir le champs 'Objet de la réunion'




    <!-- Strings used for the choice of the meeting room -->

    <string-array name="roomNumber">
        <item>Room One</item>
        <item>Room Two</item>
        <item>Room Three</item>
        <item>Room Four</item>
        <item>Room Five</item>
        <item>Room Six</item>
        <item>Room Seven</item>
        <item>Room Eight</item>
        <item>Room Nine</item>
        <item>Room Ten</item>
    </string-array>

</resources>