...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_room_choice" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMarge24dp"
        android:layout_marginEnd="@dimen/defaultMarge24dp"
        android:layout_marginBottom="@dimen/defaultMarge24dp"
        android:text="@string/ok_spinner"
...
